Implemented DELETE /logout endpoint
